i changed the main text to hello world to yep its gamer time

--- a/hello-world.html
+++ b/hello-world.html
@@ -2,7 +2,7 @@
 <!-- HTML5 Hello world by kirupa - http://www.kirupa.com/html5/getting_your_feet_wet_html5_pg1.htm -->
 <html lang="en-us">
 
-<head>
+<head>is it gamr time?
 <meta charset="utf-8">
 <title>Hello...</title>
 <style type="text/css">
@@ -10,7 +10,7 @@
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: xx-large;
 	font-weight: bold;
-	background-color: #E3F0FB;
+	background-color: #0095B6;
 	border-radius: 4px;
 	padding: 10px;
 	text-align: center;
@@ -23,19 +23,19 @@
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	font-weight: bold;
 	color: #663300;
-	width: 75px;
+	width: 105px;
 }
 
 .buttonStyle:hover {
-	border: thin solid #FFCC00;
-	background-color: #FCF9D6;
+	border: thin solid #000000;
+	background-color: #7FFFD4;
 	color: #996633;
 	cursor: pointer;
 }
 .buttonStyle:active {
 	border: thin solid #99CC00;
 	background-color: #F5FFD2;
-	color: #669900;
+	color: #0095B6;
 	cursor: pointer;
 }
 
@@ -45,7 +45,7 @@
 <body>
 <div id="mainContent">
 <p id="helloText">?</p>
-<button id="clickButton" class="buttonStyle">click me</button>
+<button id="clickButton" class="buttonStyle">click me now</button>
 </div>
 <script> 
 var myButton = document.getElementById("clickButton");
@@ -54,9 +54,10 @@ var myText = document.getElementById("helloText");
 myButton.addEventListener('click', doSomething, false)
 
 function doSomething() {
-	myText.textContent = "hello, world!";
+	myText.textContent = "Yep, its gamer time";
 }
 </script>
 
 </body>
+
 </html>
