i changes to color of the button when hoverd over and clicked to blue, added a head and text

--- a/hello-world.html
+++ b/hello-world.html
@@ -2,7 +2,7 @@
 <!-- HTML5 Hello world by kirupa - http://www.kirupa.com/html5/getting_your_feet_wet_html5_pg1.htm -->
 <html lang="en-us">
 
-<head>is it gamr time?
+<head><strong>is it gamr time?</strong>
 <meta charset="utf-8">
 <title>Hello...</title>
 <style type="text/css">
@@ -61,3 +61,4 @@ function doSomething() {
 </body>
 
 </html>
+<text>If its gamer time, put on your headset</text>
