--- a/hello-world.html
+++ b/hello-world.html
@@ -2,8 +2,9 @@
 <!-- HTML5 Hello world by kirupa - http://www.kirupa.com/html5/getting_your_feet_wet_html5_pg1.htm -->
 <html lang="en-us">
 
-<head><strong>is it gamr time?</strong>
+<h1>SANS EPIC</h1>
 <meta charset="utf-8">
+<center><img class="irc_mi" src="https://media.giphy.com/media/PiBkxZr38ZR72/200w.gif" alt="Image result for sans undertale gif" onload="typeof google==='object'&amp;&amp;google.aft&amp;&amp;google.aft(this)" width="1500" height="1000" style="margin-top: 164px;"</center>> 
 <title>Hello...</title>
 <style type="text/css">
 #mainContent {
@@ -11,16 +12,16 @@
 	font-size: xx-large;
 	font-weight: bold;
 	background-color: #0095B6;
-	border-radius: 4px;
-	padding: 10px;
+	border-radius: 700px;
+	padding: 100px;
 	text-align: center;
 }
 .buttonStyle {
-	border-radius: 4px;
+	border-radius: 30px;
 	border: thin solid #F0E020;
 	padding: 5px;
 	background-color: #F8F094;
-	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+	font-family: "Comic Sans", Tahoma, Geneva, Verdana, sans-serif;
 	font-weight: bold;
 	color: #663300;
 	width: 105px;
@@ -34,14 +35,13 @@
 }
 .buttonStyle:active {
 	border: thin solid #99CC00;
-	background-color: #F5FFD2;
+	background-color: #FFFF00;
 	color: #0095B6;
 	cursor: pointer;
 }
 
 </style>
 </head>
-
 <body>
 <div id="mainContent">
 <p id="helloText">?</p>
@@ -54,11 +54,16 @@ var myText = document.getElementById("helloText");
 myButton.addEventListener('click', doSomething, false)
 
 function doSomething() {
-	myText.textContent = "Yep, its gamer time";
+	myText.textContent = "do you play fortnite do you play fortnite do you play fortnite do you play fortnite do you play fortnite do you play fortnite do you play fortnite do you play fortnite";
 }
 </script>
-
+<head></head>
+	<h1>gamer time
+	<body>this is me after a long day of gaming, mom, get cooking</body>
+	<p><center>Gamer time</center>
+	</h1
+</head>
 </body>
+<img src="https://tse4.mm.bing.net/th?id=OIP.QOsCmRH32H_J0gkpc7QUQQHaHs&amp;pid=Api" width="474" alt="See the source image" style="width: 474px; height: 492px;" data-reactid="28">
 
-</html>
-<text>If its gamer time, put on your headset</text>
+<text><center>mom, its gamer time</center></text>
