--- a/index.html
+++ b/index.html
@@ -1,46 +1,16 @@
 <!DOCTYPE html>
 <!-- HTML5 Hello world by kirupa - http://www.kirupa.com/html5/getting_your_feet_wet_html5_pg1.htm -->
 <html lang="en-us">
+<head>
+	<link rel="stylesheet" href="index.css">
+</head>
 
-<h1>SANS EPIC</h1>
+<h1><strong>SANS EPIC</strong></h1>
 <meta charset="utf-8">
+<link href="index.css" type="text/css" rel="stylesheet"
 <center><img class="irc_mi" src="https://media.giphy.com/media/PiBkxZr38ZR72/200w.gif" alt="Image result for sans undertale gif" onload="typeof google==='object'&amp;&amp;google.aft&amp;&amp;google.aft(this)" width="1500" height="1000" style="margin-top: 164px;"</center>> 
 <title>Hello...</title>
-<style type="text/css">
-#mainContent {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: xx-large;
-	font-weight: bold;
-	background-color: #0095B6;
-	border-radius: 700px;
-	padding: 100px;
-	text-align: center;
-}
-.buttonStyle {
-	border-radius: 30px;
-	border: thin solid #F0E020;
-	padding: 5px;
-	background-color: #F8F094;
-	font-family: "Comic Sans", Tahoma, Geneva, Verdana, sans-serif;
-	font-weight: bold;
-	color: #663300;
-	width: 105px;
-}
 
-.buttonStyle:hover {
-	border: thin solid #000000;
-	background-color: #7FFFD4;
-	color: #996633;
-	cursor: pointer;
-}
-.buttonStyle:active {
-	border: thin solid #99CC00;
-	background-color: #FFFF00;
-	color: #0095B6;
-	cursor: pointer;
-}
-
-</style>
 </head>
 <body>
 <div id="mainContent">
@@ -59,9 +29,19 @@ function doSomething() {
 </script>
 <head></head>
 	<h1>gamer time
-	<body>this is me after a long day of gaming, mom, get cooking</body>
+	<body>this is me after a long day of gaming</body>
 	<p><center>Gamer time</center>
-	</h1
+	</h1>
+	<table>
+		<tr>
+			<td rowspan="2">Sans is epic</td>
+	        <td>sans is epic</td>
+		</tr>
+		<tr>
+			<td>sans epic style</td>
+			<td colspan="2">My hair toothpaste</td>
+		</tr>
+	</table>
 </head>
 </body>
 <img src="https://tse4.mm.bing.net/th?id=OIP.QOsCmRH32H_J0gkpc7QUQQHaHs&amp;pid=Api" width="474" alt="See the source image" style="width: 474px; height: 492px;" data-reactid="28">
