i added text and buttons

--- a/index.html
+++ b/index.html
@@ -1,49 +1,16 @@
 <!DOCTYPE html>
-<!-- HTML5 Hello world by kirupa - http://www.kirupa.com/html5/getting_your_feet_wet_html5_pg1.htm -->
 <html lang="en-us">
-<head>
-	<link rel="stylesheet" href="index.css">
-</head>
-
-<h1><strong>SANS EPIC</strong></h1>
-<meta charset="utf-8">
-<link href="index.css" type="text/css" rel="stylesheet"
-<center><img class="irc_mi" src="https://media.giphy.com/media/PiBkxZr38ZR72/200w.gif" alt="Image result for sans undertale gif" onload="typeof google==='object'&amp;&amp;google.aft&amp;&amp;google.aft(this)" width="1500" height="1000" style="margin-top: 164px;"</center>> 
-<title>Hello...</title>
-
-</head>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <body>
-<div id="mainContent">
-<p id="helloText">?</p>
-<button id="clickButton" class="buttonStyle">click me now</button>
-</div>
-<script> 
-var myButton = document.getElementById("clickButton");
-var myText = document.getElementById("helloText");
-
-myButton.addEventListener('click', doSomething, false)
-
-function doSomething() {
-	myText.textContent = "do you play fortnite do you play fortnite do you play fortnite do you play fortnite do you play fortnite do you play fortnite do you play fortnite do you play fortnite";
-}
-</script>
-<head></head>
-	<h1>gamer time
-	<body>this is me after a long day of gaming</body>
-	<p><center>Gamer time</center>
-	</h1>
-	<table>
-		<tr>
-			<td rowspan="2">Sans is epic</td>
-	        <td>sans is epic</td>
-		</tr>
-		<tr>
-			<td>sans epic style</td>
-			<td colspan="2">My hair toothpaste</td>
-		</tr>
-	</table>
-</head>
+<a class="btn btn-primary" href="#" role="button">Link</a>
+<button class="btn btn-primary" type="submit">Button</button>
+<input class="btn btn-primary" type="button" value="Input">
+<input class="btn btn-primary" type="submit" value="Submit">
+<input class="btn btn-primary" type="reset" value="Reset">
 </body>
-<img src="https://tse4.mm.bing.net/th?id=OIP.QOsCmRH32H_J0gkpc7QUQQHaHs&amp;pid=Api" width="474" alt="See the source image" style="width: 474px; height: 492px;" data-reactid="28">
 
-<text><center>mom, its gamer time</center></text>
+<head>
+  <link rel="stylesheet" type="text/css" href="index.css">
+</head>
+
+<h1>westly matson</h1>
