--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html lang="en-us">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <body>
-<a class="btn btn-primary" href="#" role="button">Link</a>
-<button class="btn btn-primary" type="submit">Button</button>
-<input class="btn btn-primary" type="button" value="Input">
-<input class="btn btn-primary" type="submit" value="Submit">
-<input class="btn btn-primary" type="reset" value="Reset">
+     <ul class="pull-right">
+<a class="btn btn-primary" href="#" role="button">Home</a>
+<button class="btn btn-primary" type="submit">About Me</button>
+<input class="btn btn-primary" type="button" value="Resume">
+<input class="btn btn-primary" type="submit" value="Projects">
+<input class="btn btn-primary" type="reset" value="Contact Me">
+</ul>
 </body>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="index.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<h1>westly matson</h1>
+<h1>Westly Matson</h1>
+<body>I hate sans</body>
+<ul><img src="peter.jpg"></ul>
+<h2>My name i Westly Matson, I attend Palm Desert High School</h2>
