i added pictures and text

--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 <body>
-     <ul class="pull-right">
-<a class="btn btn-primary" href="#" role="button">Home</a>
-<button class="btn btn-primary" type="submit">About Me</button>
-<input class="btn btn-primary" type="button" value="Resume">
-<input class="btn btn-primary" type="submit" value="Projects">
-<input class="btn btn-primary" type="reset" value="Contact Me">
+  <h1>Westly Matson</h1>
+<ul class="nav justify-content-end">
+  <li class="nav-item">
+    <a class="nav-link" href="index.html">Home</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link active" href="#">All</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="aboutme.html">About Me</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Resume</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link " href="#">Projects</a>
+  </li>
+   <li class="nav-item">
+    <a class="nav-link " href="#">Contact Me</a>
+  </li>
 </ul>
 </body>
 
@@ -15,7 +30,8 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<h1>Westly Matson</h1>
 <body>I hate sans</body>
-<ul><img src="peter.jpg"></ul>
-<h2>My name i Westly Matson, I attend Palm Desert High School</h2>
+<ul><img src="peter.jpg">
+<img src="eric.jpg">
+<img src="john.jpg"></ul>
+<h2>My name Westly (Fortnite) Matson, I attend Palm Desert High School</h2>
