i fixed up some stuff to make it look nice

--- a/aboutme.html
+++ b/aboutme.html
@@ -30,4 +30,6 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<title>About Me</title>
+<div class="banner">
+  <a>I AM SANS</a>
+</div>
