--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
 </head>
 
 <body>I hate sans</body>
-<ul><img src="peter.jpg">
-<img src="eric.jpg">
-<img src="john.jpg"></ul>
+
+<div class="gallery">
+  <table>
+    <tr><img src="peter.jpg"></tr>
+    <tr><img src="eric.jpg"></tr>
+    <tr><img src="john.jpg"></tr>
+  </table>
+</div>
+
 <h2>My name Westly (Fortnite) Matson, I attend Palm Desert High School</h2>
