--- a/index.html
+++ b/index.html
@@ -24,20 +24,17 @@
     <a class="nav-link " href="#">Contact Me</a>
   </li>
 </ul>
+<h1>I hate sans</h1>
 </body>
 
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body>I hate sans</body>
-
-<div class="gallery">
   <table>
     <tr><img src="peter.jpg"></tr>
     <tr><img src="eric.jpg"></tr>
     <tr><img src="john.jpg"></tr>
   </table>
-</div>
 
 <h2>My name Westly (Fortnite) Matson, I attend Palm Desert High School</h2>
