--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 </head>
 
   <table>
-    <tr><img src="peter.jpg"></tr>
-    <tr><img src="eric.jpg"></tr>
-    <tr><img src="john.jpg"></tr>
+    <tr><img src="westly,auggie.jpg" width=294 height=294 alt="peter"></tr>
+    <tr><img src="westly,mathias.jpg" width=294 height=294 alt="eric"></tr>
+    <tr><img src="westly.jpg" width=294 height=294 alt="john wock"></tr>
   </table>
 
 <h2>My name Westly (Fortnite) Matson, I attend Palm Desert High School</h2>
