i added pictures and cleaned it up

--- a/aboutme.html
+++ b/aboutme.html
@@ -31,5 +31,7 @@
 </head>
 
 <div class="banner">
-  <a>My name is Westly Matson
+  <table>
+    <img class="image1" src="westlyauggie.jpg" width=500 height=380</a>
+  </table>
 </div>
