--- a/index.html
+++ b/index.html
@@ -24,17 +24,14 @@
     <a class="nav-link " href="#">Contact Me</a>
   </li>
 </ul>
-<h1>I hate sans</h1>
 </body>
 
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-  <table>
-    <tr><img src="westly,auggie.jpg" width=294 height=294 alt="peter"></tr>
-    <tr><img src="westly,mathias.jpg" width=294 height=294 alt="eric"></tr>
-    <tr><img src="westly.jpg" width=294 height=294 alt="john wock"></tr>
+  <table class="table">
+    <tr><img class="image1" src="westlyauggie.jpg" width=294 alt="peter"></tr>
+    <tr><img class="image2" src="westlymathias.jpg" width=294 alt="eric"></tr>
+    <tr><img class="image1" src="westly.jpg" width=294 alt="john wock"></tr>
   </table>
-
-<h2>My name Westly (Fortnite) Matson, I attend Palm Desert High School</h2>
