i put text in a table

--- a/aboutme.html
+++ b/aboutme.html
@@ -32,6 +32,9 @@
 
 <div class="banner">
   <table>
-    <img class="image1" src="westlyauggie.jpg" width=500 height=380</a>
+    <tr>
+      <td><img class="image1" src="westlyauggie.jpg" width=500 height=380</td>
+      <td>My name is Weslty Matson I go to Palm Desert High School, I am studying computer science to prepare myself to go even deeper into the subject at college, I have always wanted to learn coding but never got to it until I got put in a computer science class in high school.</td>
+    </tr>
   </table>
 </div>
