I added a vide?? linked buttons to files

--- a/aboutme.html
+++ b/aboutme.html
@@ -9,13 +9,10 @@
     <a class="nav-link" href="index.html">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link active" href="#">All</a>
-  </li>
-  <li class="nav-item">
     <a class="nav-link" href="aboutme.html">About Me</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Resume</a>
+    <a class="nav-link" href="resume.html">Resume</a>
   </li>
   <li class="nav-item">
     <a class="nav-link " href="#">Projects</a>
@@ -34,7 +31,7 @@
   <table>
     <tr>
       <td><img class="image1" src="westlyauggie.jpg" width=500 height=380</td>
-      <td>My name is Weslty Matson I go to Palm Desert High School, I am studying computer science to prepare myself to go even deeper into the subject at college, I have always wanted to learn coding but never got to it until I got put in a computer science class in high school.</td>
+      <td>My name is Weslty Matson I go to Palm Desert High School, I am studying computer science to prepare myself to go even deeper into the subject at college, I have always wanted to learn coding but never got to it until I got put in a computer science class in high school. But anoter one of my intrest is playing guitar, I have always liked music and once I picked up my guitar I have not put it down, I plan to be in a band and rule the world</td>
     </tr>
   </table>
 </div>
