--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en-us">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -8,7 +9,7 @@
   <li class="nav-item">
     <a class="nav-link" href="index.html">Home</a>
   </li>
-  <li class="nav-item">
+    <li class="nav-item">
     <a class="nav-link" href="aboutme.html">About Me</a>
   </li>
   <li class="nav-item">
@@ -27,14 +28,4 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-  <table class="table">
-    <tr><img class="image1" src="westlyauggie.jpg" width=294 alt="peter"></tr>
-    <tr><img class="image2" src="westlymathias.jpg" width=294 alt="eric"></tr>
-    <tr><img class="image1" src="westly.jpg" width=294 alt="john wock"></tr>
-  </table>
-  
-  <footer>
-    <p class="float-right">
-      Palm Desert High Schoool
-    </p>
-  </footer>
+<body>Fortnite 2</body>
