--- a/projects.html
+++ b/projects.html
@@ -13,10 +13,10 @@
     <a class="nav-link" href="aboutme.html">About Me</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Resume</a>
+    <a class="nav-link" href="resume.html">Resume</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link " href="#">Projects</a>
+    <a class="nav-link " href="projects.html">Projects</a>
   </li>
    <li class="nav-item">
     <a class="nav-link " href="#">Contact Me</a>
@@ -29,5 +29,9 @@
 </head>
 
 <table>
-  <tr><video src="video.mp4"></video.mp4></tr>
+  <td>
+    <tr><video width="820" height="400" controls>
+    <source src="video.mp4" type="video/mp4"></tr>
+    <tr>The app that i made was a clicker app that talks, its based off the game Undertale</tr>
+  </td>
 </table>
