--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a class="nav-link" href="aboutme.html">About Me</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Resume</a>
+    <a class="nav-link" href="resume.html">Resume</a>
   </li>
   <li class="nav-item">
     <a class="nav-link " href="#">Projects</a>
