--- a/resume.html
+++ b/resume.html
@@ -13,10 +13,10 @@
     <a class="nav-link" href="aboutme.html">About Me</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Resume</a>
+    <a class="nav-link" href="resume.html">Resume</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link " href="#">Projects</a>
+    <a class="nav-link " href="projects.html">Projects</a>
   </li>
    <li class="nav-item">
     <a class="nav-link " href="#">Contact Me</a>
