i centerd my vide oand added text

--- a/projects.html
+++ b/projects.html
@@ -30,8 +30,12 @@
 
 <table>
   <td>
-    <tr><video width="820" height="400" controls>
-    <source src="video.mp4" type="video/mp4"></tr>
-    <tr>The app that i made was a clicker app that talks, its based off the game Undertale</tr>
+    <tr><center><video src="video.mp4" width="820" height="400"  controls></center></tr>
+    <tr>The app that i made was a clicker app that talks, its based off the game Undertale, basically you just click the button to accumulate points, it took me a while to get the app to work properly, but with the help of freinds i was able to overcome this problem and got the app working properly.</tr>
+    <tr>
+      <center><a href="sans.apk" download>
+        <button type="button" class="btn btn-primary btn-lg">Download</button></center>
+      </center>
+    </tr>
   </td>
 </table>
