--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a class="nav-link" href="resume.html">Resume</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link " href="#">Projects</a>
+    <a class="nav-link " href="projects.html">Projects</a>
   </li>
    <li class="nav-item">
     <a class="nav-link " href="#">Contact Me</a>
