--- a/aboutme.html
+++ b/aboutme.html
@@ -20,6 +20,9 @@
    <li class="nav-item">
     <a class="nav-link " href="#">Contact Me</a>
   </li>
+    <li class="nav-item">
+    <a class="nav-link " href="python.html">python project</a>
+  </li>
 </ul>
 </body>
 
