--- a/python.html
+++ b/python.html
@@ -47,7 +47,7 @@
 <table>
   <td>
     <tr><center><video src="python.webm" width="820" height="400"  controls></center></tr>
-    <tr><center>TEXT ABOUT GAME</center></tr>
+    <tr><center>This game is about a soldier on the battle feild, he is under attack and needs to make some hearbreakin decisions</center></tr>
   </td>
 </table>
 
