I added text and buttons with javascript

--- a/python.html
+++ b/python.html
@@ -34,7 +34,33 @@
     ptext.style.fontSize= "1000px"
     ptext.style.backgroundColor= "blue"
     ptext.style.color= "#ff6600"
+    alert("The following images may be disturbing to all viewers")
   }
+  
+  function Adder(){
+    var x = 20
+    var y = 1
+    var z = x + y
+    var ptext = document.getElementById('ptext')
+    ptext.innerHTML = z
+    alert ("Bruh moment incoming")
+  }
+ 
+ function Bruh(){
+   var x = 20
+   var y =2
+   var z = x + y
+   var ptext = document.getElementById('ptext')
+   ptext.innerHTML = z
+   ptext.style.color= "#FF0000"
+   
+ }
+ 
+ var word = "Monkey " + "Ice Cream " + "🅂🄾🅄🄹🄰 🄱🄾🅈"
+ document.get.ElementById("name").innerHTML = word
+ 
+ 
+ 
 </script>
 
 <head>
@@ -52,7 +78,54 @@
 </table>
 
 <body>
-  <button type="button" onclick=clkme() ><img class="image1" src="troll.jpeg" width=2940></button>
+  <button type="button" onclick=clkme() ><img class="image1" src="troll.jpeg" width=900 height=2500></button>
   <p id="ptext">Press this button to Monkey</p>
+  
+  <button type="button" onClick=Adder() >Adder</button></button>
+  
+  <button type="button" onCLick=Bruh() >Bruh</button>
+  
+  <p id="name"> My Name Monkey</p>
+  
+  <p id="jeff"> What my name again?</p>
+  
+<script>
+  function clkme(){
+   var ptext = document.getElementById('ptext')
+    ptext.innerHTML = 'BRUH'
+    ptext.style.fontSize= "1000px"
+    ptext.style.backgroundColor= "blue"
+    ptext.style.color= "#ff6600"
+    alert("The following images may be disturbing to all viewers")
+  }
+  
+  function Adder(){
+    var x = 20
+    var y = 1
+    var z = x + y
+    var ptext = document.getElementById('ptext')
+    ptext.innerHTML = z
+    alert ("Bruh moment incoming")
+  }
+ 
+ function Bruh(){
+   var x = 2456
+   var y =6
+   var z = x + y
+   var ptext = document.getElementById('ptext')
+   ptext.innerHTML = z
+   ptext.style.color= "#FF0000"
+   
+ }
+ 
+ var word = "Monkey " + "Ice Cream " + "🅂🄾🅄🄹🄰 🄱🄾🅈"
+ document.getElementById("name").innerHTML = word
+ 
+ var al = "your " + "name " + "GEOFf"
+ document.getElementById("jeff").innerHTML = al
+ jeff.style.color= "#ff6600"
+ jeff.style.fontSize= "500px"
+ 
+</script>
   
 </body>
