I added more pictures

--- a/python.html
+++ b/python.html
@@ -92,8 +92,9 @@
   
   <img id="okay" src="monkey.webp">
 
-  <button type="button" id="okay" onclick=fortnite()>fortnite monkey</button>
+  <button type="button" id="alk" onclick=fortnite()>fortnite monkey</button>
   
+  <img id="igor" src="igor.jpg" width=700 height=500>
 <script>
   function clkme(){
    var ptext = document.getElementById('ptext')
@@ -126,7 +127,9 @@
  function fortnite(){
    var pic = document.getElementById("okay")
    pic.src="wavecheck.jpg"
-   pic.innterHTML = 'WAVE CHECK'
+   alert ("WAVE CHECK")
+   var button = document.getElementById("alk")
+   button.innerHTML = "Okay, these waves kinda fresh doe"
  }
  
  var word = "Monkey " + "Ice Cream " + "🅂🄾🅄🄹🄰 🄱🄾🅈"
