--- a/python.html
+++ b/python.html
@@ -94,7 +94,8 @@
 
   <button type="button" id="alk" onclick=fortnite()>fortnite monkey</button>
   
-  <img id="igor" src="igor.jpg" width=700 height=500>
+  <img id="alk" src="notigor.jpg" width=700 height=500>
+  
 <script>
   function clkme(){
    var ptext = document.getElementById('ptext')
