--- a/aboutme.html
+++ b/aboutme.html
@@ -3,12 +3,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 <body>
-     <h1>Westly Matson</h1>
+  <h1>Westly Matson</h1>
 <ul class="nav justify-content-end">
   <li class="nav-item">
     <a class="nav-link" href="index.html">Home</a>
   </li>
-  <li class="nav-item">
+    <li class="nav-item">
     <a class="nav-link" href="aboutme.html">About Me</a>
   </li>
   <li class="nav-item">
@@ -22,6 +22,9 @@
   </li>
     <li class="nav-item">
     <a class="nav-link " href="python.html">python project</a>
+  </li>
+    <li class="nav-item">
+    <a class="nav-link " href="story.html">story</a>
   </li>
 </ul>
 </body>
