--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <li class="nav-item">
     <a class="nav-link" href="index.html">Home</a>
   </li>
-  <li class="nav-item">
+    <li class="nav-item">
     <a class="nav-link" href="aboutme.html">About Me</a>
   </li>
   <li class="nav-item">
@@ -22,6 +22,9 @@
   </li>
     <li class="nav-item">
     <a class="nav-link " href="python.html">python project</a>
+  </li>
+    <li class="nav-item">
+    <a class="nav-link " href="story.html">story</a>
   </li>
 </ul>
 </body>
