--- a/resume.html
+++ b/resume.html
@@ -24,6 +24,9 @@
     <li class="nav-item">
     <a class="nav-link " href="python.html">python project</a>
   </li>
+    <li class="nav-item">
+    <a class="nav-link " href="story.html">story</a>
+  </li>
 </ul>
 </body>
 
