i added the whole python project tab.

--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,9 @@
     <li class="nav-item">
     <a class="nav-link " href="story.html">story</a>
   </li>
+    <li class="nav-item">
+    <a class="nav-link " href="pythonproject.html">Python Quiz</a>
+  </li>
 </ul>
 </body>
 
