--- a/python.html
+++ b/python.html
@@ -27,6 +27,9 @@
     <li class="nav-item">
     <a class="nav-link " href="story.html">story</a>
   </li>
+     <li class="nav-item">
+    <a class="nav-link " href="pythonproject.html">Python Quiz</a>
+  </li>
 </ul>
 </body>
 
@@ -75,7 +78,7 @@
 
 <table>
   <td>
-    <tr><center><video src="python.webm" width="820" height="400"  controls></center></tr>
+    <tr><center><video src="" width="820" height="400"  controls></center></tr>
     <tr><center>This game is about a soldier on the battle field, he is under attack and needs to make some hearbreakin decisions</center></tr>
   </td>
 </table>
