--- a/resume.html
+++ b/resume.html
@@ -27,6 +27,9 @@
     <li class="nav-item">
     <a class="nav-link " href="story.html">story</a>
   </li>
+    <li class="nav-item">
+    <a class="nav-link " href="pythonproject.html">Python Quiz</a>
+  </li>
 </ul>
 </body>
 
