--- a/createtask.html
+++ b/createtask.html
@@ -33,6 +33,9 @@
     <li class="nav-item">
     <a class="nav-link " href="createtask.html">Create task</a>
   </li>
+    <li class="nav-item">
+    <a class="nav-link " href="arduino.html">Arduino Project</a>
+  </li>
 </ul>
 </body>
 
