--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
     <li class="nav-item">
     <a class="nav-link " href="pythonproject.html">Python Quiz</a>
   </li>
+    <li class="nav-item">
+    <a class="nav-link " href="createtask.html">Create task</a>
+  </li>
+    <li class="nav-item">
+    <a class="nav-link " href="arduino.html">Arduino Project</a>
+  </li>
 </ul>
 </body>
 
