--- a/python.html
+++ b/python.html
@@ -27,8 +27,14 @@
     <li class="nav-item">
     <a class="nav-link " href="story.html">story</a>
   </li>
-     <li class="nav-item">
+    <li class="nav-item">
     <a class="nav-link " href="pythonproject.html">Python Quiz</a>
+  </li>
+    <li class="nav-item">
+    <a class="nav-link " href="createtask.html">Create task</a>
+  </li>
+    <li class="nav-item">
+    <a class="nav-link " href="arduino.html">Arduino Project</a>
   </li>
 </ul>
 </body>
